Correction contraste des couleurs

--- a/style.css
+++ b/style.css
@@ -743,7 +743,7 @@ h4 {
 }
 
 .white {
-    color: #FFFFFF!important;
+    color: #ffffff!important;
 }
 
 .portfolio-thumb {
@@ -778,11 +778,11 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #fa621c62;
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #db7f28!important;
 }
 
 .btn-atomic-tangerine {
